--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,10 +32,10 @@ jobs:
         run: |-
           make docker-dev \
           	cache=ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd \
-          	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd \
+          	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd \
           	platform=linux/amd64 \
           	arch=amd64
-          docker push ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd
+          docker push ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd
   build_arm:
     runs-on: ubuntu-latest
     env:
@@ -61,10 +61,10 @@ jobs:
         run: |-
           make docker-dev \
           	cache=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm \
-          	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm \
+          	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm \
           	platform=linux/arm/v7 \
           	arch=arm64
-          docker push ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm
+          docker push ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm
   publish:
     runs-on: ubuntu-latest
     env:
@@ -92,7 +92,7 @@ jobs:
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-all \
-          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-all \
+          	--remote-cache ghcr.io/${GITHUB_REPOSITORY}-cache:main-all \
           	+images --repo=ghcr.io/ --tag=${TAG}
   build_k3d_amd:
     runs-on: ubuntu-latest
@@ -119,10 +119,10 @@ jobs:
         run: |-
           make docker-k3d \
           	cache=ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-k3d \
-          	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd-k3d \
+          	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-k3d \
           	platform=linux/amd64 \
           	arch=amd64
-          docker push ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-amd-k3d
+          docker push ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-k3d
   build_k3d_arm:
     runs-on: ubuntu-latest
     env:
@@ -148,10 +148,10 @@ jobs:
         run: |-
           make docker-k3d \
           	cache=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d \
-          	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm-k3d \
+          	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d \
           	platform=linux/amd64 \
           	arch=amd64
-          docker push ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-arm-k3d
+          docker push ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d
   publish_k3d:
     runs-on: ubuntu-latest
     env:
@@ -181,6 +181,4 @@ jobs:
           earthly --strict --push --no-output \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-k3d-amd \
           	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:main-k3d-arm \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-k3d-amd \
-          	--cache-from ghcr.io/${GITHUB_REPOSITORY}-cache:${BRANCH}-k3d-arm \
           	+imagesK3DBase --repo=ghcr.io/ --tag=${TAG}
