--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,6 +28,9 @@ jobs:
         with:
           image: tonistiigi/binfmt:latest
           platforms: all
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
       - name: Build amd target
         run: |-
           make docker-dev \
@@ -57,6 +60,9 @@ jobs:
         with:
           image: tonistiigi/binfmt:latest
           platforms: all
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
       - name: Build arm target
         run: |-
           make docker-dev \
@@ -86,6 +92,9 @@ jobs:
         with:
           image: tonistiigi/binfmt:latest
           platforms: all
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
       - name: Build amd k3d-base target
         run: |-
           make docker-k3d \
@@ -115,6 +124,9 @@ jobs:
         with:
           image: tonistiigi/binfmt:latest
           platforms: all
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
       - name: Build arm k3d-base target
         run: |-
           make docker-k3d \
