--- a/Makefile.common
+++ b/Makefile.common
@@ -382,7 +382,7 @@ tag ?= meh
 docker-%:
 	bash -c ' \
 		source .env && env DOCKER_BUILDKIT=1 docker build --platform $(platform) --target defn-$(second) \
-		--cache-from $(cache) -t $(tag) \
+		$(cache) -t $(tag) \
 		--build-arg arch=$(arch) \
 		--build-arg TAILSCALE=$${TAILSCALE} \
 		--build-arg CLOUDFLARED=$${CLOUDFLARED} \
