got the wrong platform for arm

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,7 +68,7 @@ jobs:
           make docker-nix \
           	cache=--cache-from=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-nix \
           	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-nix \
-          	platform=linux/arm/v7 \
+          	platform=linux/arm64 \
           	arch=arm64
           docker push ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-nix
   build_amd:
@@ -136,7 +136,7 @@ jobs:
           make docker-dev \
           	cache="--cache-from=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-nix --cache-from=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm" \
           	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm \
-          	platform=linux/arm/v7 \
+          	platform=linux/arm64 \
           	arch=arm64
           docker push ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm
   build_k3d_amd:
@@ -204,6 +204,6 @@ jobs:
           make docker-k3d \
           	cache="--cache-from=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-nix --cache-from=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d" \
           	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d \
-          	platform=linux/arm/v7 \
+          	platform=linux/arm64 \
           	arch=arm64
           docker push ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d
