--- a/Makefile.common
+++ b/Makefile.common
@@ -381,7 +381,7 @@ tag ?= meh
 
 docker-%:
 	bash -c ' \
-		source .env && env DOCKER_BUILDKIT=1 docker buildx --push --platform $(platform) --target defn-$(second) -t $(tag) $(cache) \
+		source .env && docker buildx build --push --platform $(platform) --target defn-$(second) -t $(tag) $(cache) \
 		--build-arg arch=$(arch) \
 		--build-arg TAILSCALE=$${TAILSCALE} \
 		--build-arg CLOUDFLARED=$${CLOUDFLARED} \
