--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -167,6 +167,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: Build amd k3d-base target
         run: |-
+          set -x
           make docker-k3d \
           	cache="--cache-from=type=type=gha --cache-to=type=gha" \
           	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-k3d \
@@ -201,6 +202,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: Build arm k3d-base target
         run: |-
+          set -x
           make docker-k3d \
           	cache="--cache-from=type=type=gha --cache-to=type=gha" \
           	cache="--cache-from=registry,ref=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-nix --cache-from=registry,ref=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d --cache-to=registry,ref=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d" \
