shw what images

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,11 +33,13 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: Build nix amd target
         run: |-
+          set -x
           make docker-nix \
           	cache="--cache-from=type=type=gha --cache-to=type=gha" \
           	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-nix \
           	platform=linux/amd64 \
           	arch=amd64
+          docker images
           docker push ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-nix
   build_nix_arm:
     runs-on: ubuntu-latest
@@ -65,11 +67,13 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: Build nix arm target
         run: |-
+          set -x
           make docker-nix \
           	cache="--cache-from=type=type=gha --cache-to=type=gha" \
           	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-nix \
           	platform=linux/arm64 \
           	arch=arm64
+          docker images
           docker push ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-nix
   build_amd:
     runs-on: ubuntu-latest
