--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,7 +34,7 @@ jobs:
       - name: Build nix amd target
         run: |-
           make docker-nix \
-          	cache="--cache-from=type=type=gha --cache-to=type=gha" \
+          	cache="--cache-from=type=gha --cache-to=type=gha" \
           	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-nix \
           	platform=linux/amd64 \
           	arch=amd64
@@ -65,7 +65,7 @@ jobs:
       - name: Build nix arm target
         run: |-
           make docker-nix \
-          	cache="--cache-from=type=type=gha --cache-to=type=gha" \
+          	cache="--cache-from=type=gha --cache-to=type=gha" \
           	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-nix \
           	platform=linux/arm64 \
           	arch=arm64
@@ -98,7 +98,7 @@ jobs:
       - name: Build amd target
         run: |-
           make docker-dev \
-          	cache="--cache-from=type=type=gha --cache-to=type=gha" \
+          	cache="--cache-from=type=gha --cache-to=type=gha" \
           	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd \
           	platform=linux/amd64 \
           	arch=amd64
@@ -131,7 +131,8 @@ jobs:
       - name: Build arm target
         run: |-
           make docker-dev \
-          	cache="--cache-from=type=type=gha --cache-to=type=gha" \
+          	cache="--cache-from=type=gha --cache-to=type=gha" \
+          docker push ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d
           	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm \
           	platform=linux/arm64 \
           	arch=arm64
@@ -165,7 +166,7 @@ jobs:
         run: |-
           set -x
           make docker-k3d \
-          	cache="--cache-from=type=type=gha --cache-to=type=gha" \
+          	cache="--cache-from=type=gha --cache-to=type=gha" \
           	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-amd-k3d \
           	platform=linux/amd64 \
           	arch=amd64
@@ -199,7 +200,7 @@ jobs:
         run: |-
           set -x
           make docker-k3d \
-          	cache="--cache-from=type=type=gha --cache-to=type=gha" \
+          	cache="--cache-from=type=gha --cache-to=type=gha" \
           	cache="--cache-from=registry,ref=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-nix --cache-from=registry,ref=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d --cache-to=registry,ref=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d" \
           	tag=ghcr.io/${GITHUB_REPOSITORY}-cache:main-arm-k3d \
           	platform=linux/arm64 \
